@@ -1,0 +1,13 @@
+# Begin /etc/sysconfig/openldap
+
+# slapd normally serves ldap only on all TCP-ports 389. slapd can also
+# service requests on TCP-port 636 (ldaps) and requests via unix
+# sockets.
+# Example usage:
+#SLAPD_SERVICES="ldap://127.0.0.1:389/ ldaps:/// ldapi:///"
+
+# Add any aditional options you want to pass to slapd command line.
+# See man 8 slapd for more information
+SLAPD_OPTIONS=""
+
+# End /etc/sysconfig/openldap
